gccida/g1/copy_addr_to_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_addr_to_reg/src/explow.c:1155:28: error: use of undeclared identifier 'machine_mode'
return copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), x); 
                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/copy_addr_to_reg/src/obj/explow.o] Error 1
